objects/SMAX_PS_InventoryCountLine__c.object
<CustomObject>
    <label>Inventory Count Line</label>
    <nameField>
        <label>Inventory Count Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Count Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>SMAX_PS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory Count Lines</relationshipLabel>
        <relationshipName>Inventory_Count_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EntryQty__c</fullName>
        <label>Entry Qty</label>
        <precision>12</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_BookedQty__c</fullName>
        <label>Booked Qty</label>
        <precision>12</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_StockType__c</fullName>
        <label>Stock Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Unit_Cost__c</fullName>
        <description>Denotes the unit cost for the Inventory count line</description>
        <inlineHelpText>Denotes the unit cost for the Inventory count line</inlineHelpText>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CountedQty__c</fullName>
        <label>Counted Qty</label>
        <precision>12</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Counted_By__c</fullName>
        <description>Denotes the user that counted the stock</description>
        <inlineHelpText>Denotes the user that counted the stock</inlineHelpText>
        <label>Counted By</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Found_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that the item is a found item and was not on the inventory count document.</description>
        <inlineHelpText>Denotes that the item is a found item and was not on the inventory count document.</inlineHelpText>
        <label>Is Found Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that an inventory count line has been deleted</description>
        <inlineHelpText>Denotes that an inventory count line has been deleted</inlineHelpText>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_BatchNumber__c</fullName>
        <label>Batch Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Zero_Qty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that there is a zero qty for an inventory count line</description>
        <inlineHelpText>Denotes that there is a zero qty for an inventory count line</inlineHelpText>
        <label>Is Zero Qty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ProductCost__c</fullName>
        <formula>SMAX_PS_ProductStock__r.SVMXC__Product_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Cost Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ProductStock__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Stock</label>
        <referenceTo>SVMXC__Product_Stock__c</referenceTo>
        <relationshipLabel>Inventory Count Lines</relationshipLabel>
        <relationshipName>Inventory_Count_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Code__c</fullName>
        <description>Pulls product code from the product record.</description>
        <formula>SMAX_PS_Product__r.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_InvCnt_Status__c</fullName>
        <label>Inventory Count Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Counted</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Recount</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Serialized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that the inventory count line is serialized</description>
        <inlineHelpText>Denotes that the inventory count line is serialized</inlineHelpText>
        <label>Is Serialized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_InventoryCount__c</fullName>
        <label>Inventory Count</label>
        <referenceTo>SMAX_PS_InventoryCount__c</referenceTo>
        <relationshipLabel>Inventory Count Lines</relationshipLabel>
        <relationshipName>Inventory_Count_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_DifferenceValue__c</fullName>
        <formula>( SMAX_PS_CountedQty__c -  SMAX_PS_BookedQty__c ) * SMAX_PS_ProductCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_DifferencePosted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes the difference between count posted for an Inventory Count Line</description>
        <inlineHelpText>Denotes the difference between count posted for an Inventory Count Line</inlineHelpText>
        <label>Difference Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ValueofBookedQty__c</fullName>
        <description>Denotes the overall value of the booked qty</description>
        <inlineHelpText>Denotes the overall value of the booked qty</inlineHelpText>
        <label>Value of Booked Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_BaseUnitOfMeasure__c</fullName>
        <label>Base Unit Of Measure</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Difference_in_Cost__c</fullName>
        <formula>SMAX_PS_SAP_Calcualted_Stock_Cost__c-SMAX_PS_Counted_Product_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference in Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EntryUnitOfMeasure__c</fullName>
        <label>Entry Unit Of Measure</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Why_Recount_Needed__c</fullName>
        <label>Why Recount Needed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Counted_Product_Cost__c</fullName>
        <formula>SMAX_PS_ProductCost__c*SMAX_PS_CountedQty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counted Stock Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Actual_Serial_Numbers__c</fullName>
        <description>Denotes the actual serial numbers that are captured in an inventory count line</description>
        <inlineHelpText>Denotes the actual serial numbers that are captured in an inventory count line</inlineHelpText>
        <label>Actual Serial Numbers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Item_has_been_counted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that the inventory count line has been counted</description>
        <inlineHelpText>Denotes that the inventory count line has been counted</inlineHelpText>
        <label>Item Has Been Counted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Reason_for_Difference__c</fullName>
        <label>Reason for Difference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Expected_Serial_Numbers__c</fullName>
        <description>Denotes the expected serial numbers that should be received for an inventory count line</description>
        <inlineHelpText>Denotes the expected serial numbers that should be received for an inventory count line</inlineHelpText>
        <label>Expected Serial Numbers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_Calcualted_Stock_Cost__c</fullName>
        <formula>SMAX_PS_ProductCost__c*SMAX_PS_BookedQty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Calcualted Stock Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Inventory_Stock_Count_Number__c</fullName>
        <description>Inventory count auto number</description>
        <displayFormat>{0000000000}</displayFormat>
        <inlineHelpText>Inventory count auto number</inlineHelpText>
        <label>Inventory Stock Count Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Value_of_PhysicalInventoryCount__c</fullName>
        <description>Denotes the value of a physical count for an inventory count line</description>
        <inlineHelpText>Denotes the value of a physical count for an inventory count line</inlineHelpText>
        <label>Value of Physical Inventory Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>